Add blog content

--- a/themes/judica/layouts/partials/head.html
+++ b/themes/judica/layouts/partials/head.html
@@ -119,6 +119,22 @@ hr {
 }
 .mission > * {
 }
+.blogtext a {
+    text-decoration: underline;
+}
+.blogtext {
+    width: 75%;
+    padding-left: 12.5%;
+    display: grid;
+    grid-template-columns:0.5fr 3fr 0.5fr;
+}
+.blogtext .blogtext-inner {
+    font-size: 1.1em;
+}
+
+.blogtext .blogtext-inner > p{
+    text-indent: 3em;
+}
 
 .darkmode {
     background-color: black;
