--- a/themes/judica/layouts/partials/head.html
+++ b/themes/judica/layouts/partials/head.html
@@ -1,43 +1,6 @@
-
-    <script>
-
-        const storage = window.localStorage;
-        const get_darkmode = () => {
-            const darkmode = storage.getItem('darkmode');
-            console.log('get-darkmode',darkmode);
-            if (darkmode === undefined || darkmode === null) {
-                return false;
-            }
-            return darkmode === "true";
-        };
-        const set_darkmode = () =>
-        {
-            if (get_darkmode()) {
-                console.log("Dark!");
-                document.body.classList.add('darkmode');
-            } else {
-
-                console.log("Light!");
-                document.body.classList.remove('darkmode');
-            }
-        };
-        window.onload = () => {
-            // not it so the first onclick is correct
-            const v = document.getElementsByClassName('darkmode-switch')[0];
-            v.onclick = (e) => {
-                console.log('clicked');
-                console.log(storage);
-                storage.setItem('darkmode', ! get_darkmode());
-                get_darkmode();
-                set_darkmode();
-            }
-            console.log(v);
-            set_darkmode();
-            
-        };
-    </script>
- <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@200;500&display=swap" rel="stylesheet">
-<style>
+<head>
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@200;500&display=swap" rel="stylesheet">
+    <style>
 body {
     font-family: 'IBM Plex Mono', monospace;
     width: 100%;
@@ -61,15 +24,15 @@ body {
     grid-template-columns: 1fr max-content;
 }
 .nav > ul {
-display: flex;
-list-style: none;
-padding-left:0px;
+    display: flex;
+    list-style: none;
+    padding-left:0px;
 }
 
 .nav > ul > li {
-float: right;
-font-size: 2em;
-padding-right: 20px;
+    float: right;
+    font-size: 2em;
+    padding-right: 20px;
 }
 .float-left {
     float: left;
@@ -83,79 +46,158 @@ a {
 }
 
  a:hover {
-    text-decoration: underline;
-    color: #000000;
-}
-a.underlined {
+     text-decoration: underline;
+     color: #000000;
+ }
 
-    text-decoration: underline;
-}
+ .lead {
+     margin-top: 0;
+     margin-bottom: 0;
+     font-size: 4.5em;
+ }
+ .content > * {
+     max-width:100%;
+     display: flex;
+ }
+ hr {
+     color: #000000;
+     width: 75%;
 
-.lead {
-    margin-top: 0;
-    margin-bottom: 0;
-    font-size: 4.5em;
-}
-.content > * {
-    max-width:100%;
-    display: flex;
-}
-hr {
- color: #000000;
- width: 75%;
+ }
 
-}
+ .main2 {
+     width: 75%;
+     padding-left: 12.5%;
+ }
+ .mission {
+     display: grid;
+     width:100%;
+     grid-template-rows:1fr 1fr 1fr 1fr;
+     text-align: center;
+ }
+ .mission > * {
+ }
+ .blogtext a {
+     text-decoration: underline;
+ }
+ .blogtext {
+     width: 75%;
+     padding-left: 12.5%;
+     display: grid;
+     grid-template-columns:0.5fr 3fr 0.5fr;
+ }
+ .blogtext .blogtext-inner {
+     font-size: 1.1em;
+ }
 
-.main2 {
-    width: 75%;
-    max-width:1000px;
-    padding-left: 12.5%;
-}
-.mission {
-    display: grid;
-    width:100%;
-    grid-template-rows:1fr 1fr 1fr 1fr;
-    text-align: center;
-}
-.mission > * {
-}
-.blogtext a {
-    text-decoration: underline;
-}
-.blogtext {
-    width: 75%;
-    padding-left: 12.5%;
-    display: grid;
-    grid-template-columns:0.5fr 3fr 0.5fr;
-}
-.blogtext .blogtext-inner {
-    font-size: 1.1em;
-}
+ .blogtext .blogtext-inner > p{
+     text-indent: 3em;
+ }
 
-.blogtext .blogtext-inner > p{
-    text-indent: 3em;
-}
+ .darkmode {
+     background-color: black;
+     color: white;
+ }
 
-.darkmode {
-    background-color: black;
-    color: white;
-}
-
-.darkmode a {
-    text-decoration:none;
-    color: #ffffff;
-}
+ .darkmode a {
+     text-decoration:none;
+     color: #ffffff;
+ }
 
  .darkmode a:hover {
-    text-decoration: underline;
-    color: #ffffff;
-}
+     text-decoration: underline;
+     color: #ffffff;
+ }
 
-.darkmode hr {
- color: #ffffff;
+ .darkmode hr {
+     color: #ffffff;
 
-}
-.highlight > pre {
-    padding-left: 1em;
-}
-</style>
+ }
+
+
+ .lightmode {
+     background-color:white;
+     color: black;
+ }
+
+ .lightmode a {
+     text-decoration:none;
+     color: #000000;
+ }
+
+ .lightmode a:hover {
+     text-decoration: underline;
+     color: #000000;
+ }
+
+ .lightmode hr {
+     color: #000000;
+
+ }
+
+
+ .highlight > pre {
+     padding-left: 1em;
+ }
+
+ a.underlined {
+
+     text-decoration: underline;
+ }
+    </style>
+
+    <script>
+
+        const storage = window.localStorage;
+        const get_darkmode = () => {
+            const darkmode = storage.getItem('darkmode');
+            if (darkmode === undefined || darkmode === null) {
+                return true;
+            }
+            return darkmode === "true";
+        };
+        const set_darkmode = () =>
+        {
+            if (get_darkmode()) {
+                document.body.classList.remove('lightmode');
+                document.body.classList.add('darkmode');
+            } else {
+                document.body.classList.remove('darkmode');
+                document.body.classList.add('lightmode');
+            }
+        };
+
+
+        // see https://stackoverflow.com/questions/57484932/prevent-page-from-flickering-inherited-body-bg-color-with-theme-toggle-by-forcin
+        // required to prevent flicker
+        function applyBackgroundTheme(color) {
+            var css = "body { background: " + color + "; }",
+                head = document.head || document.getElementsByTagName('head')[0],
+                style = document.createElement('style');
+            head.appendChild(style);
+
+            style.type = 'text/css';
+            if (style.styleSheet){
+                style.styleSheet.cssText = css;
+            } else {
+                style.appendChild(document.createTextNode(css));
+            }
+            return style;
+        }
+        const style = applyBackgroundTheme(get_darkmode()? "black" : "white")
+        document.addEventListener("DOMContentLoaded", () => {
+            // not it so the first onclick is correct
+            set_darkmode();
+            style.parentElement.removeChild(style);
+            const v = document.getElementsByClassName('darkmode-switch')[0];
+            v.onclick = (e) => {
+                storage.setItem('darkmode', ! get_darkmode());
+                get_darkmode();
+                set_darkmode();
+            }
+
+        });
+
+
+    </script>
+</head>
