get rid of custom layouts

--- a/themes/judica/layouts/_default/single.html
+++ b/themes/judica/layouts/_default/single.html
@@ -3,8 +3,17 @@
     {{- partial "head.html" . -}}
     <body>
         {{- partial "header.html" . -}}
-        <div id="content">
-            {{.Content}}
+<div class="main">
+    <img src="{{.Params.img}}"/>
+    <h1 class="lead">{{.Title}}</h1>
+</div>
+<hr/>
+        <div class="blogtext">
+            <div></div>
+            <div class="blogtext-inner">
+                {{.Content}}
+            </div>
+            <div></div>
         </div>
         {{- partial "footer.html" . -}}
     </body>
