--- a/themes/judica/layouts/blog/list.html
+++ b/themes/judica/layouts/blog/list.html
@@ -15,7 +15,7 @@
         <div class="main2">
             {{ range .Pages }}
             <h4>
-                <a href="{{.Permalink}}">{{.Date.Format "2006-01-02"}} | {{.Title}}</a>
+                <a href="{{.URL}}">{{.Date.Format "2006-01-02"}} | {{.Title}}</a>
             </h4>
             {{ end }}
         </div>
