handle different screensizes better

--- a/themes/judica/layouts/partials/head.html
+++ b/themes/judica/layouts/partials/head.html
@@ -87,7 +87,9 @@ a {
      grid-template-columns:0.5fr 3fr 0.5fr;
  }
  .blogtext .blogtext-inner {
+     max-width: 750px;
      font-size: 1.1em;
+     margin:auto;
  }
 
  .blogtext .blogtext-inner > p{
