--- a/themes/judica/layouts/blog/list.html
+++ b/themes/judica/layouts/blog/list.html
@@ -14,9 +14,13 @@
         <hr>
         <div class="main2">
             {{ range .Pages }}
-            <h4>
-                <a href="{{.URL}}">{{.Date.Format "2006-01-02"}} | {{.Title}}</a>
-            </h4>
+            <h4 class="nobottom"> <a class="underlined" href="{{.URL}}">{{.Title}} </a> </h4>
+            {{if .Params.Author }} <small> by {{.Params.Author}}</small> {{end}}
+            <small>on {{.Date.Format "January 2, 2006"}}</small>
+            <div>
+                {{.Summary}}
+                <a href="{{ .RelPermalink }}" class='underlined'>read more…</a>
+            </div>
             {{ end }}
         </div>
         {{- partial "footer.html" . -}}
