--- a/themes/judica/layouts/partials/head.html
+++ b/themes/judica/layouts/partials/head.html
@@ -69,6 +69,13 @@ a {
      width: 75%;
      padding-left: 12.5%;
  }
+
+ .recent-blogs {
+     display: grid;
+     width:100%;
+     grid-template-columns: 1fr 1fr 1fr;
+ }
+
  .mission {
      display: grid;
      width:100%;
@@ -148,6 +155,15 @@ a {
  }
  .nobottom {
      margin-bottom:0;
+ }
+
+
+ figcaption {
+    font-size: 0.8em;
+
+ }
+ figcaption a {
+     text-decoration:underline !important;
  }
     </style>
 
