Copy mission to new files about and charter

--- a/themes/judica/layouts/_default/index.html
+++ b/themes/judica/layouts/_default/index.html
@@ -9,7 +9,7 @@
             {{ range .Site.Params.missions }}
             <h1 style="margin-top: 0"> {{ .}} </h1>
             {{ end }}
-                <h4><a href="/mission/">learn more ></a></h4>
+                <h4><a href="/about/">learn more ></a></h4>
         </div>
 
         </div>
