--- a/themes/judica/layouts/blog/list.html
+++ b/themes/judica/layouts/blog/list.html
@@ -7,9 +7,8 @@
 
         <br>
         <br>
-        <div class="main">
-            {{if .Params.img }} <img src="{{.Params.img}}"/> {{end}}
-            <h1 class="lead">{{.Title}}</h1>
+        <div class="main2" style='text-align:left'>
+            <h1 class="lead">{{.Title}}.</h1>
         </div>
         <hr>
         <div class="main2">
