--- a/themes/judica/layouts/_default/index.html
+++ b/themes/judica/layouts/_default/index.html
@@ -9,7 +9,7 @@
     </div>
     <hr>
     <div class="main2">
-        <h3> recent blogs </h3>
+        <h3> fresh posts </h3>
         <div class="recent-blogs">
         {{ range where .Pages "Section" "blog" }}
             {{range first 3 .Pages }}
@@ -26,34 +26,6 @@
     </div>
     <hr>
     <div class="main2">
-        <h1> join judica </h1>
-        <div class = 'joinrow'>
-
-            <h2 style="padding:0"> open positions </h2>
-            <h2 style="padding:0"> support </h2>
-            <h2 style="padding:0"> get our newsletter </h2>
-            <div>
-                <p>push the boundaries of what's possible in bitcoin at judica. seeking technical
-                contributors, but open to  non-technical.</p>
-
-                <h4><a href="/join/">see positions ></a></h4>
-            </div>
-
-            <div>
-                <p> we can't do it alone -- we're seeking organizations and individuals aligned with
-                our vision to support our work </p>
-                <h4><a href="/join/">become a sponsor ></a></h4>
-
-
-            </div>
-            <div>
-
-                <div style="overflow:hidden; width:350px; height:100px;">
-                    <iframe src="https://judica.substack.com/embed"  style="padding: 0; height:
-                                 130px; width: 350px; position:
-                        relative; top: -5px; left: -15px;" frameborder="0" scrolling="no"></iframe>
-                </div>
-            </div>
-        </div>
+        {{partial "fragments/joinlet.html"}}
     </div>
 {{ end }}
