--- a/themes/judica/layouts/blog/list.html
+++ b/themes/judica/layouts/blog/list.html
@@ -25,7 +25,7 @@
                         <small>on {{.Date.Format "January 2, 2006"}}</small>
                         <div>
                             {{.Summary}}
-                            <a href="{{ .RelPermalink }}" class='underlined'>read more…</a>
+                            <a href="{{ .RelPermalink }}" class='underlined'>read more&mldr;</a>
                         </div>
                     </div>
                 </div>
