Add Twitter Card

--- a/themes/judica/layouts/partials/head.html
+++ b/themes/judica/layouts/partials/head.html
@@ -242,4 +242,6 @@ a {
 
     </script>
     {{ template "_internal/google_analytics_async.html" . }}
+    {{ template "_internal/opengraph.html" . }}
+    {{ template "_internal/twitter_cards.html" . }}
 </head>
