--- a/layouts/partials/fragments/joinlet.html
+++ b/layouts/partials/fragments/joinlet.html
@@ -2,10 +2,8 @@
         <h1> join judica </h1>
         <div class = 'joinrow'>
 
-            <h2 style="padding:0"> open positions </h2>
-            <h2 style="padding:0"> support </h2>
-            <h2 style="padding:0"> get our newsletter </h2>
             <div>
+            <h2 style="padding:0"> open roles </h2>
                 <p>push the boundaries of what's possible in bitcoin at judica. seeking technical
                 contributors, but open to  non-technical.</p>
 
@@ -13,6 +11,8 @@
             </div>
 
             <div>
+
+                <h2 style="padding:0"> support </h2>
                 <p> we can't do it alone -- we're seeking organizations and individuals aligned with
                 our vision to support our work </p>
                 <h4><a href="/join/">become a sponsor ></a></h4>
@@ -20,11 +20,12 @@
 
             </div>
             <div>
+            <h2 style="padding:0"> get our newsletter </h2>
 
-                <div style="overflow:hidden; width:350px; height:100px;">
+                <div style="overflow:hidden; width:330px; height:100px;">
                     <iframe src="https://judica.substack.com/embed"  style="padding: 0; height:
-                                 130px; width: 350px; position:
-                        relative; top: -5px; left: -15px;" frameborder="0" scrolling="no"></iframe>
+                                 130px; width: 330px; position:
+                        relative;" frameborder="0" scrolling="no"></iframe>
                 </div>
             </div>
         </div>
