Not sure what I changed but a lot of incremental stuff

--- a/layouts/partials/fragments/joinlet.html
+++ b/layouts/partials/fragments/joinlet.html
@@ -7,15 +7,15 @@
                 <p>push the boundaries of what's possible in bitcoin at judica. seeking technical
                 contributors, but open to  non-technical.</p>
 
-                <h4><a href="/join/">see positions ></a></h4>
+                <div style="text-align:right"><h4><a href="/join/">see positions ></a></h4></div>
             </div>
 
             <div>
 
                 <h2 style="padding:0"> support </h2>
-                <p> we can't do it alone -- we're seeking organizations and individuals aligned with
+                <p> we can't do it alone; we're seeking organizations and individuals aligned with
                 our vision to support our work </p>
-                <h4><a href="/join/">become a sponsor ></a></h4>
+                <div style="text-align:right"> <h4><a href="/join/">become a sponsor ></a></h4></div>
 
 
             </div>
