--- a/layouts/software/single.html
+++ b/layouts/software/single.html
@@ -9,9 +9,9 @@
             <h1 class="lead">{{.Title}}.</h1>
         </div>
         <hr/>
-        <div class="blogtext">
+        <div class="main2">
             <div></div>
-            <div class="blogtext-inner">
+            <div>
                 {{.Content}}
             </div>
             <div></div>
