--- a/themes/judica/layouts/_default/index.html
+++ b/themes/judica/layouts/_default/index.html
@@ -1,7 +1,7 @@
 {{ define "main" }}
-    <div class="main">
+    <div class="main2 main">
             <h1 class="lead">{{.Site.Params.slogan }}</h1>
-        <img src="{{.Site.Params.headerimage}}"/>
+            <img width="100%" src="{{.Site.Params.headerimage}}"/>
     </div>
     <div class="main2">
         {{partial "fragments/mission.html"}}
