--- a/themes/judica/layouts/_default/single.html
+++ b/themes/judica/layouts/_default/single.html
@@ -11,9 +11,9 @@
         <div class="main2">
             <img src="{{.Params.img}}"/>
         </div>
-        <div class="blogtext">
+        <div class="main2">
             <div></div>
-            <div class="blogtext-inner">
+            <div class="">
                 {{.Content}}
             </div>
             <div></div>
