--- a/themes/judica/layouts/blog/single.html
+++ b/themes/judica/layouts/blog/single.html
@@ -3,20 +3,20 @@
     {{- partial "head.html" . -}}
     <body>
         {{- partial "header.html" . -}}
-        <div class="main">
+        <div class="main2">
             <h1> {{.Title}} </h1>
             {{if .Params.Author }} <h3> by {{.Params.Author}}</h3> {{end}}
             <hr>
         </div>
-        <div class="blogtext">
+        <div class="main2">
             <div></div>
-            <div class="blogtext-inner">
+            <div>
                 {{.Content}}
             </div>
             <div></div>
         </div>
         <hr>
-        <div class="blogtext">
+        <div class="main2">
             <div></div>
             {{ template "_internal/disqus.html" . }}
             <div></div>
