Cleanups of main sections & replace wizard with app type text

--- a/layouts/partials/fragments/mission.html
+++ b/layouts/partials/fragments/mission.html
@@ -1,4 +1,5 @@
-judica is a bitcoin research and deployment organization. we aspire to help bitcoin fulfill its
-promise as a peer-to-peer financial system and restore the balance of power to the people.
-read <a href="/charter/" class="underlined">the judica charter</a> to understand more about 
-our outlook.
+judica is your partner in building DAOs and other decentralized applications on
+bitcoin. let us help you create peer-to-peer financial systems and restore the
+balance of power to the people. we offer an open source platform and utility
+apis to make your project a success.  read <a href="/charter/"
+class="underlined">the judica charter</a> to understand more about our outlook.
