--- a/themes/judica/layouts/_default/index.html
+++ b/themes/judica/layouts/_default/index.html
@@ -1,33 +1,77 @@
 {{ define "main" }}
-    <div class="main2 main">
-            <h1 class="lead">{{.Site.Params.slogan }}</h1>
-            <img width="100%" src="{{.Site.Params.headerimage}}"/>
+<script>
+    document.addEventListener("DOMContentLoaded", function(event) {
+        const elt = document.getElementById("slogan");
+        console.log(elt);
+        const slogan = elt.dataset.slogan;
+        const start = slogan.indexOf("[");
+        const end = slogan.indexOf("]");
+        const pre = slogan.substring(0, start);
+        const post = slogan.substring(end + 1);
+        const mid = JSON.parse(slogan.substring(start, end + 1));
+        elt.children[0].innerHTML = pre;
+        elt.children[2].innerHTML = post;
+        let index = 0;
+        let strindex = 0;
+        let incr = 1;
+        const cb = () => {
+            strindex += incr;
+            elt.children[1].innerHTML = mid[index].substring(0, strindex);
+            switch (strindex) {
+                case mid[index].length:
+                    incr = -1;
+                    setTimeout(cb, 1000);
+                    break;
+                case 0:
+                    index += 1;
+                    index %= mid.length;
+                    incr = 1;
+                    strindex = 0;
+                    setTimeout(cb, 100);
+                    break;
+                default:
+                    if (incr === 1) 
+                        setTimeout(cb, Math.min(1000/mid[index].length, 100));
+                    else
+                        setTimeout(cb, Math.min(500/mid[index].length, 50));
+            }
+        };
+        cb();
+    });
+</script>
+<div class="main2 main">
+    <h1 class="lead">{{.Site.Params.headtext }}</h1>
+    <h1 class="" id="slogan" data-slogan={{.Site.Params.slogan }}>
+        <span></span>
+        <span style="display: inline-block; text-align: left;"></span>
+        <span></span>
+    </h1>
+</div>
+<div class="main2">
+    {{partial "fragments/mission.html"}}
+    <div style="width:100%;text-align: right">
+        <h4><a href="/about/"> learn more ></a></h4>
     </div>
-    <div class="main2">
-        {{partial "fragments/mission.html"}}
-        <div style="width:100%;text-align: right"><h4><a href="/about/"> learn more ></a></h4></div>
-    </div>
-    <hr>
-    <div class="main2">
-        <h3> fresh posts </h3>
-        <div class="recent-blogs">
-        {{ range where .Pages "Section" "blog" }}
-            {{range first 3 .Pages }}
-            <div style="" class="recent-blog-post">
-                <img src="{{.Params.front_pic}}" style="width:100%; max-width: 200px; margin:auto;"/>
-                <div>
+</div>
+<hr>
+<div class="main2">
+    <h3> fresh posts </h3>
+    <div class="recent-blogs">
+        {{ range where .Pages "Section" "blog" }} {{range first 3 .Pages }}
+        <div style="" class="recent-blog-post">
+            <img src="{{.Params.front_pic}}" style="width:100%; max-width: 200px; margin:auto;" />
+            <div>
                 <h4 class="nobottom"> <a class="underlined" href="{{.URL}}">{{.Title}} </a> </h4>
                 {{if .Params.Author }} <small> by {{.Params.Author}}</small> {{end}}
                 <small>on {{.Date.Format "January 2, 2006"}}</small>
-                </div>
             </div>
-            {{end}}
-        {{ end }}
         </div>
-        <div style="width:100%;text-align: right"><a href="/blog/"> more posts ></a></div>
+        {{end}} {{ end }}
     </div>
-    <hr>
-    <div class="main2">
-        {{partial "fragments/joinlet.html"}}
-    </div>
+    <div style="width:100%;text-align: right"><a href="/blog/"> more posts ></a></div>
+</div>
+<hr>
+<div class="main2">
+    {{partial "fragments/joinlet.html"}}
+</div>
 {{ end }}
