--- a/themes/judica/static/css/style.css
+++ b/themes/judica/static/css/style.css
@@ -1,26 +1,27 @@
-
 body {
     font-family: 'IBM Plex Mono', monospace;
     width: 100%;
     overflow-x: hidden;
 }
+
 .main {
-    text-align:center;
+    text-align: center;
 }
+
 .content {
     display: grid;
-    width:100%;
+    width: 100%;
     grid-template-columns: 90px 1fr calc(2fr-90px);
-    grid-template-rows:1fr;
+    grid-template-rows: 1fr;
 }
+
 .float-left {
     float: left;
     padding-right: 0px;
 }
 
-
 a {
-    text-decoration:none;
+    text-decoration: none;
     color: #000000;
 }
 
@@ -29,25 +30,25 @@ a:hover {
     color: #000000;
 }
 
-.content > * {
-    max-width:100%;
+.content>* {
+    max-width: 100%;
     display: flex;
 }
 
-
-
 .mission {
     display: grid;
-    width:100%;
-    grid-template-rows:1fr 1fr 1fr 1fr;
+    width: 100%;
+    grid-template-rows: 1fr 1fr 1fr 1fr;
     text-align: center;
 }
-.mission > * {
-}
+
+.mission>* {}
+
 .blogtext-inner a {
     text-decoration: underline;
 }
-.blogtext-inner  p {
+
+.blogtext-inner p {
     text-indent: 3em;
 }
 
@@ -57,7 +58,7 @@ a:hover {
 }
 
 .darkmode a {
-    text-decoration:none;
+    text-decoration: none;
     color: #ffffff;
 }
 
@@ -68,17 +69,15 @@ a:hover {
 
 .darkmode hr {
     color: #ffffff;
-
 }
 
-
 .lightmode {
-    background-color:white;
+    background-color: white;
     color: black;
 }
 
 .lightmode a {
-    text-decoration:none;
+    text-decoration: none;
     color: #000000;
 }
 
@@ -89,58 +88,56 @@ a:hover {
 
 .lightmode hr {
     color: #000000;
-
 }
 
-
-.highlight > pre {
+.highlight>pre {
     padding-left: 1em;
 }
 
 a.underlined {
-
     text-decoration: underline;
 }
-.nobottom {
-    margin-bottom:0;
-}
 
+.nobottom {
+    margin-bottom: 0;
+}
 
 figcaption {
     font-size: 0.8em;
+}
 
-}
 figcaption a {
-    text-decoration:underline !important;
+    text-decoration: underline !important;
 }
+
 .blogrow {
     display: grid;
     grid-template-columns: 1fr 0.5fr 4fr;
     padding-bottom: 2em;
 }
-.blogrow :first-child {
-}
-.blogrow > div {
+
+.blogrow :first-child {}
+
+.blogrow>div {
     padding-top: 0;
 }
 
-
-
 .main2 {
     width: 75%;
-    max-width:1024px;
-    margin:auto;
+    max-width: 1024px;
+    margin: auto;
 }
+
 hr {
     color: #000000;
-
 }
-body  hr {
+
+body hr {
     color: #000000;
     width: 75%;
-    max-width:1024px;
-
+    max-width: 1024px;
 }
+
 .main2 hr {
     width: 100%;
 }
@@ -152,18 +149,19 @@ body  hr {
 }
 
 .nav {
+    max-width: 1024px;
+    margin: auto;
+}
 
-        max-width:1024px;
-        margin:auto;
-    }
 @media all and (max-width:320px) {
     .recent-blog-post {
-        padding: 20px; margin:auto; text-align: center;
+        padding: 20px;
+        margin: auto;
+        text-align: center;
     }
     .lead {
         font-size: 1.3em;
     }
-
     .nav {
         padding-left: max(70px, 12.5%);
         padding-right: max(70px, 12.5%);
@@ -171,24 +169,25 @@ body  hr {
         display: grid;
         grid-template-columns: 1fr max-content;
     }
-    .nav > ul {
+    .nav>ul {
         list-style: none;
-        padding-left:0px;
+        padding-left: 0px;
     }
-
-    .nav > ul > li {
+    .nav>ul>li {
         font-size: 1.5em;
         padding-right: 20px;
     }
 }
+
 @media all and (min-width:321px) and (max-width:768px) {
     .recent-blog-post {
-        padding: 20px; margin:auto; text-align: center;
+        padding: 20px;
+        margin: auto;
+        text-align: center;
     }
     .lead {
         font-size: 2em;
     }
-
     .nav {
         padding-left: max(70px, 12.5%);
         padding-right: max(70px, 12.5%);
@@ -196,28 +195,25 @@ body  hr {
         display: grid;
         grid-template-columns: 1fr max-content;
     }
-    .nav > ul {
+    .nav>ul {
         list-style: none;
-        padding-left:0px;
+        padding-left: 0px;
     }
-
-    .nav > ul > li {
+    .nav>ul>li {
         font-size: 1.5em;
         padding-right: 20px;
     }
-
 }
 
 @media all and (min-width:769px) and (max-width:1024px) {
     .recent-blog-post {
         display: grid;
-        width:100%;
+        width: 100%;
         grid-template-columns: 1fr 1fr;
     }
     .lead {
         font-size: 3em;
     }
-
     .nav {
         padding-left: max(70px, 12.5%);
         padding-right: max(70px, 12.5%);
@@ -225,40 +221,40 @@ body  hr {
         display: grid;
         grid-template-columns: 1fr max-content;
     }
-    .nav > ul {
+    .nav>ul {
         display: flex;
         list-style: none;
-        padding-left:0px;
+        padding-left: 0px;
     }
-
-    .nav > ul > li {
+    .nav>ul>li {
         float: right;
         font-size: 1.5em;
         padding-right: 20px;
     }
-
 }
+
 @media all and (min-width:1025px) {
     .joinrow {
         display: grid;
         grid-template-columns: 1fr 1fr fit-content(330px);
     }
-    .joinrow > div {
+    .joinrow>div {
         padding-right: 2em;
     }
-
     .recent-blogs {
         display: grid;
-        width:100%;
+        width: 100%;
         grid-template-columns: 1fr 1fr 1fr;
     }
     .recent-blog-post {
-        padding: 20px; margin:auto; text-align: center;
+        padding: 20px;
+        margin: auto;
+        text-align: center;
     }
     .joinpage {
-        display: grid; grid-template-columns: 1fr 0.25fr 1fr; 
+        display: grid;
+        grid-template-columns: 1fr 0.25fr 1fr;
     }
-
     .nav {
         padding-left: max(70px, 12.5%);
         padding-right: max(70px, 12.5%);
@@ -266,22 +262,19 @@ body  hr {
         display: grid;
         grid-template-columns: 1fr max-content;
     }
-    .nav > ul {
+    .nav>ul {
         display: flex;
         list-style: none;
-        padding-left:0px;
+        padding-left: 0px;
     }
-
-    .nav > ul > li {
+    .nav>ul>li {
         float: right;
         font-size: 2em;
         padding-right: 20px;
     }
-
 }
 
-
-.highlight > * {
+.highlight>* {
     overflow-x: auto;
     overflow-y: auto;
     max-height: 100em;
