--- a/layouts/partials/fragments/charter-intro.html
+++ b/layouts/partials/fragments/charter-intro.html
@@ -1,4 +1,5 @@
-judica's overarching goal is to fiscally empower humanity. we beleive bitcoin stands to be the
-vehicle that drives this empowerment, but only if the bitcoin community keeps a dedicated focus
-on helping all users improve their fiscal liberty. judica aspires to be a nexus for the bitcoin
-community to develop the tools required to realize bitcoin's potential.
+judica's overarching goal is to fiscally empower humanity. we beleive bitcoin
+stands to be the vehicle that drives this empowerment, but only if the bitcoin
+community keeps a dedicated focus on helping all users improve their fiscal
+liberty. judica is the platform for bitcoin community to build the projects that
+realize bitcoin's potential.
