Revert "replace URL with permalink"
This reverts commit 70625c7e3de5e30f11401b20959f3a4a364f04b5.

--- a/themes/judica/layouts/partials/header.html
+++ b/themes/judica/layouts/partials/header.html
@@ -5,7 +5,7 @@
     </ul>
     <ul>
         {{ range .Site.Menus.main }}
-        <li> <a href="{{.Permalink}}">{{.Name}}</a></li>
+        <li> <a href="{{.URL}}">{{.Name}}</a></li>
         {{end}}
     </ul>
     </header>
