--- a/themes/judica/layouts/blog/single.html
+++ b/themes/judica/layouts/blog/single.html
@@ -12,7 +12,7 @@
         </div>
         <div class="main2">
             <div></div>
-            <div>
+            <div class="blogtext-inner">
                 {{.Content}}
             </div>
             <div></div>
